--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -7,3 +7,19 @@
 .wy-nav-content .rst-content {
     max-width: 1300px !important;
 }
+
+/* Italicize the definition term to increase contrast in text formatting */
+dl dt {
+    font-weight: normal; /* Remove the default bold */
+    font-style: italic;  /* Add italics */
+}
+
+/* Make the rubric directive more visually distinct */
+p.rubric {
+    font-weight: bold;
+    padding-left: 10px;        /* Space text away from border */
+    border-left: 4px solid #2980b9; /* Thick blue line on the left */
+    background-color: #f8f9fa; /* Very light grey background */
+    display: inline-block;     /* Hug the text length */
+    width: 100%;               /* Or span full width */
+}
